# demo

commands/: Cargo.toml
commands/src/: main.rs
custom-cargo/: Cargo.toml
custom-cargo/adder/: Cargo.toml
custom-cargo/adder/src/: main.rs
custom-cargo/reducer/: Cargo.toml
custom-cargo/reducer/src/: lib.rs
custom-cargo/src/: lib.rs  main.rs
enums/: Cargo.toml
enums/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
files/: Cargo.toml  input.txt
files/src/: main.rs
for-while-loop/: Cargo.toml
for-while-loop/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
generic-trait-lifetime/: Cargo.toml
generic-trait-lifetime/src/: main.rs
growing-project/: Cargo.toml
growing-project/restaurant/: Cargo.toml
growing-project/restaurant/src/: house.rs  (+1 more)
growing-project/src/: main.rs
guess-game/: Cargo.toml
guess-game/src/: main.rs
hello/src/: main.rs
hmap/: Cargo.toml
hmap/src/: main.rs
impl/: Cargo.toml
impl/src/: main.rs
iter-closure/: Cargo.toml
iter-closure/src/: main.rs
minigrep/: Cargo.toml  info.txt
minigrep/src/: lib.rs  main.rs
modules/: Cargo.toml
modules/src/: lib.rs
ownership/: Cargo.toml
ownership/src/: main.rs
randoms/: Cargo.toml
randoms/src/: main.rs
references/: Cargo.toml
statement/src/: main.rs
strings/: Cargo.toml
strings/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
threads/: Cargo.toml
threads/src/: main.rs
traits/: Cargo.toml
traits/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
vectors/: Cargo.toml
vectors/src/: main.rs
