[package]
name = "custom-cargo"
version = "0.1.0"
authors = ["stone <335612970@qq.com>"]
edition = "2018"

[workspace]
members = [
    "adder",
    "reducer"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3

[dependencies]
rand = "0.5.5"